Forbid projectId in finding update
