# back/src/swagger-output.json
@@ -196,7 +196,7 @@
             "name": "body",
             "in": "body",
             "schema": {
-              "$ref": "#/definitions/CreateFindingDTO"
+              "$ref": "#/definitions/UpdateFindingDTO"
             }
           }
         ],
@@ -1272,6 +1272,39 @@
         "projectId": {
           "type": "string",
           "example": "36a3ab3f-0e04-4cba-aa3d-ba35a3a9ab87"
+        }
+      }
+    },
+    "UpdateFindingDTO": {
+      "type": "object",
+      "properties": {
+        "title": {
+          "type": "string",
+          "example": "Text"
+        },
+        "solution": {
+          "type": "string",
+          "example": "Text"
+        },
+        "description": {
+          "type": "string",
+          "example": "Text"
+        },
+        "assignedId": {
+          "type": "string",
+          "example": "49389be7-c132-452c-a2d3-80c7a6fdf790"
+        },
+        "statusId": {
+          "type": "string",
+          "example": "6ed9435f-685b-4607-a6a3-c9a00f80448a"
+        },
+        "severityId": {
+          "type": "string",
+          "example": "3491ec2f-f2dc-4b7b-8cea-47155d2d6087"
+        },
+        "categoryId": {
+          "type": "string",
+          "example": "2a97ec94-d91c-49bc-95c5-42decebc0a88"
         }
       }
     },
